<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">EmotionGif</string>
    <string name="app_name">EmotionGif</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="example_nsliding_panel_layout">Example\nSliding Panel Layout</string>
    <string name="example_ndrawer_layout">Example\nDrawer Layout</string>
    <string name="img">Img</string>
    <string name="example_ngoogle_signin">Example\nGoogle+ SignIn</string>
    <string name="title_activity_google_plus">GooglePlusActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_google_play_games">GooglePlayGamesActivity</string>
    <string name="example_ngoogle_play_games">Example\nGoogle Play Games</string>
    <string name="title_activity_fused_location">FusedLocationActivity</string>
    <string name="example_nfused_location">Example\nFused Location</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="title_activity_main">Type-a-Number Challenge</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="easy_mode_explanation">You\'re playing in easy mode, so you got the score you requested! Wasn\'t that easy?</string>
    <string name="hard_mode_explanation">You\'re playing in hard mode, so you only got half the score you requested! Isn\'t this game hard?</string>
    <string name="achievement_prime_toast_text">Prime score!</string>
    <string name="achievement_arrogant_toast_text">Arrogant (requested maximum score)!</string>
    <string name="achievement_humble_toast_text">Humble! (requested 0 score)</string>
    <string name="achievement_leet_toast_text">L33t! (got 1337 score)</string>
    <string name="achievement">Achievement</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="what_score_do_you_deserve">What score do you think you deserve?</string>
    <string name="initial_input">0000</string>
    <string name="digit0"> 0 </string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="choose_difficulty">Choose a difficulty to play:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="you_win">You win! Your score is:</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your progress with friends.</string>
    <string name="title_activity_google_cloud_storage">GoogleCloudStorageActivity</string>
    <string name="example_ngoogle_cloud_storage">Example\nGoogle Cloud Storage</string>
    <string name="title_activity_google_maps_v2">GoogleMapsV2Activity</string>
    <string name="example_ngoogle_maps_v2">Example\nGoogle Maps v2</string>

</resources>