<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DrawerLayoutActivity" >

    <Button
        android:id="@+id/buttonSlidingPanelLayout"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:text="@string/example_nsliding_panel_layout" />

    <Button
        android:id="@+id/buttonDrawerLayout"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonSlidingPanelLayout"
        android:layout_margin="4dp"
        android:text="@string/example_ndrawer_layout" />

    <Button
        android:id="@+id/buttonGooglePlusSignIn"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonDrawerLayout"
        android:layout_margin="4dp"
        android:text="@string/example_ngoogle_signin" />

    <Button
        android:id="@+id/buttonGooglePlayGames"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonGooglePlusSignIn"
        android:layout_margin="4dp"
        android:text="@string/example_ngoogle_play_games" />

    <Button
        android:id="@+id/buttonFusedLocation"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonGooglePlayGames"
        android:layout_margin="4dp"
        android:text="@string/example_nfused_location" />

    <Button
        android:id="@+id/buttonGoogleCloudStorage"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonFusedLocation"
        android:layout_margin="4dp"
        android:text="@string/example_ngoogle_cloud_storage" />

    <Button
        android:id="@+id/buttonGoogleMapsV2"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonGoogleCloudStorage"
        android:layout_margin="4dp"
        android:text="@string/example_ngoogle_maps_v2" />

</RelativeLayout>
